# Smash-LeetCode

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/api/: caller.ts
client/src/components/home/: HomePage.tsx  ProblemCard.tsx  data.tsx
client/src/components/leetcode/: Leetcode.tsx  TagSelector.tsx  utils.ts
client/src/components/leetcode/analyzer/: AlternativeApproaches.tsx  CodeAnalyzer.tsx  CodeStyle.tsx  ComplexityAnalysis.tsx  PerformanceMeter.tsx  colors.ts
client/src/components/leetcode/coach/: ChatInput.tsx  Coach.tsx
client/src/components/leetcode/code/: Syntax.tsx
client/src/components/leetcode/questions/: ChatInterface.tsx  CodeActions.tsx  CodeDisplay.tsx  CodeSegment.tsx  GenerationPanel.tsx  (+2 more)
client/src/components/llm/: ChatInput.tsx  ModelSelect.tsx  PastedContent.tsx  PromptTypeSelect.tsx
client/src/components/utils/: FullScreenWrapper.tsx
client/src/config/: config.ts
client/src/store/: store.ts
client/src/store/chat-input/: hook.ts  slice.ts  type.d.ts
client/src/store/leetcode/: api.ts  hook.ts  problemSlice.ts  slice.ts  type.ts
server/: pyproject.toml  requirements.txt
server/src/: main.py
server/src/cache/: cache.py
server/src/db/: __init__.py  config.py  context.py  mixins.py
server/src/llm/: models.py
server/src/problems/: __init__.py  handler.py  models.py  service.py
server/src/routes/: problems.py
server/src/serve/: app.py  middleware.py  stream.py
server/src/solution/: solve.py
server/src/utils/: leetcode_problems.py
(+11 files in other folders)
