[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Utkarsh Priyadarshi <utkarshpriyadarshi5026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.39"
loguru = "^0.7.3"
cachetools = "^5.5.2"
langchain = "^0.3.21"
fastapi = "^0.115.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
